<?xml version="1.0" encoding="utf-8"?>

<!-- Jeremy Johnson -->
<!-- Assignment 2 -->
<!-- March 8th, 2019 -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rockButton"
        android:layout_width="104dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/rock_button"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/paperButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_rock_button_round" />

    <ImageView
        android:id="@+id/paperButton"
        android:layout_width="105dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/paper_button"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@+id/scissorsButton"
        app:layout_constraintStart_toEndOf="@+id/rockButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_paper_button_round" />

    <ImageView
        android:id="@+id/scissorsButton"
        android:layout_width="104dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/scissors_button"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paperButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_scissor_button_round" />

    <TextView
        android:id="@+id/yourMoveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="128dp"
        android:text="Your Move"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:text="Games Move"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yourMoveText" />

    <ImageView
        android:id="@+id/playersMoveImage"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yourMoveText"
        app:layout_constraintEnd_toStartOf="@+id/gamesMoveImage"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_none_button_round" />

    <ImageView
        android:id="@+id/gamesMoveImage"
        android:layout_width="155dp"
        android:layout_height="141dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/yourMoveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playersMoveImage"
        app:srcCompat="@mipmap/ic_none_button_round" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="32dp"
        android:text="@string/results_text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gamesWonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gamesWonText"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toStartOf="@+id/gamesLostText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gamesLostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gamesLostText"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toStartOf="@+id/gamesDrawText"
        app:layout_constraintStart_toEndOf="@+id/gamesWonText" />

    <TextView
        android:id="@+id/gamesDrawText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gamesDrawText"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gamesLostText" />
</android.support.constraint.ConstraintLayout>